chap09_registry/private-registry-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: private-registry-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
      - registry.diehard.net
    secretName: ssl-key-cert-ingress
  rules:
    - host: registry.diehard.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docker-registry-k8s
                port:
                  number: 5000
